--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,9 +92,9 @@ body,
 }
 
 .ql-editor {
-  line-height: 22px !important;
+  line-height: 20px !important;
   padding: 8px 12px !important;
-  color: #1d1d1d !important;
+  color: #1d1c1d !important;
   font-weight: 400 !important;
   font-family: "Lato", sans-serif !important;
   font-size: 14px !important;
@@ -112,13 +112,12 @@ body,
   padding: 0 !important;
 }
 
-.ql-editor:before {
+.ql-editor::before {
   left: 12px !important;
   font-family: "Lato", sans-serif !important;
   color: #8d8d8d !important;
-  font-size: 14px !important;
   font-style: normal !important;
+  font-size: 14px !important;
   font-weight: 400 !important;
   @apply truncate;
 }
-
